--- a/2.generalites.md
+++ b/2.generalites.md
@@ -11,7 +11,7 @@ Transmission d'information permettant l'utilisation des mails, la tenue de visio
 
 Service permettant de traduire des URL en adresses IP
 
-
+![dns](dns.png)
 
 ### Web
 
@@ -67,7 +67,7 @@ Un navigateur est un type de client http
 
 ## Bref historique
 
-## 1950s
+### 1950s
 
 La conceptualisation
 
