--- a/1.reponses.md
+++ b/1.reponses.md
@@ -7,6 +7,11 @@
 * Un fournisseur d'accès
 * *Une ligne téléphonique* -> une mise en oeuvre de l'accès
 
+### Commentaires
+
+Choix proposés pas top
+Dans tous les cas, le minimum c'est un accès fonctionnel fourni par votre fournisseur et une machine pour y accéder
+
 ## Maintenant que je peux aller sur internet, pour surfer sur le web, j'ai besoin de :
 
 * ~~Un environnement Windows~~
@@ -26,7 +31,11 @@
 ## Pourquoi ?
 
 (Microsoft) Edge, (Apple) Safari et (Google) Chrome sont des navigateurs
-=> Un autre ?
+(Google) Android est un OS pour smartphones et tablettes
+
+### Commentaires
+
+Un autre ?
 
 ## Qui est l'intrus ?
 
@@ -40,6 +49,10 @@
 ## Pourquoi ?
 
 Google, Qwant et Bing sont des moteurs de recherches
+
+### Commentaires
+
+On parle bien de Google le moteur de recherche, la seule confusion possible est avec l'entreprise Google et non pas leurs différents logiciels et applications (Chrome, Gmail...)
 
 ## Je connais la signification de ces sigles (je sais que SNCF ça veut dire Société nationale des chemins de fer français)
 
