--- a/2.generalites.md
+++ b/2.generalites.md
@@ -65,6 +65,12 @@ Par extension désigne aussi la machine hébergeant le logiciel.
 Logiciel permettant de requêter puis de recevoir les ressources.
 Un navigateur est un type de client http
 
+## En gros
+
+Internet = réseau de tuyaux & Web = une partie du contenu circulant dans les tuyaux
+http = transport de l'information & html = contenu de la page (information structurée)
+ip = adresse de la machine & url = adresse de la ressource
+
 ## Bref historique
 
 ### 1950s
