--- a/1.reponses.md
+++ b/1.reponses.md
@@ -76,4 +76,8 @@ On parle bien de Google le moteur de recherche, la seule confusion possible est 
 * dns : traduction de nom de domaine en adresse ip
 * jneca (je n'en connais aucun)
 
+### Commentaires
+
+un autre langage ? un autre protocole ?
+
 ## Commentaire sur l'utilisation de l'anglais
