--- a/2.generalites.md
+++ b/2.generalites.md
@@ -15,7 +15,7 @@ Service permettant de traduire des URL en adresses IP
 
 ### Web
 
-Assez littéralement la toile d'araignée
+Littéralement la toile d'araignée
 
 Une des applications possibles du réseau Internet qui a démocratisé l'accès à Internet
 
@@ -108,3 +108,5 @@ Les premières mises en oeuvre et avancées
 ### Architecture
 
 ### Langage
+
+css garden
