--- a/1.reponses.md
+++ b/1.reponses.md
@@ -9,7 +9,9 @@
 
 ### Commentaires
 
-Choix proposés pas top
+On peut se connecter sur Internet sans réseau wifi
+
+Enoncés des choix proposés pas top
 
 Dans tous les cas, le minimum c'est un accès fonctionnel fourni par votre fournisseur et une machine pour y accéder
 
