--- a/2.generalites.md
+++ b/2.generalites.md
@@ -35,11 +35,15 @@ https://www.google.com/search?q=bibliothèques+clermont+metropole
 
 Décomposition :
 
-* Protocole : https
+* Protocole : `https`
 * Localisation de la ressource : 
-  * Nom de domaine : www.google.com (possibilité d'ajouter un port ou un nom d'utilisateur)
-  * Nom de la ressource à demander : search
-  * Données supplémentaires optionnelles introduites par `?` contenant ici la requête faite
+  * Nom de domaine : `www.google.com` (possibilité d'ajouter un port ou un nom d'utilisateur)
+  * Nom de la ressource à demander : `search`
+  * Paramètres : `q=bibliothèques+clermont+metropole` données supplémentaires optionnelles introduites par `?` contenant ici la requête faite
+* Autres ajouts possibles
+  * nom d'utilisateur et mot de passe avant le nom de domaine terminé par `@`
+  * un port après le nom de domaine précédé par `:`
+  * une ancre introduite par `#`
 
 
 ### 2. le langage html pour écrire chaque ressource
@@ -95,17 +99,45 @@ Les premières mises en oeuvre et avancées
 
 * Définition des protocoles 
 * Première utilisation du DNS
-* + de 100 000 d'ordinateurs connectés
+* Plus de 100 000 d'ordinateurs connectés
 
 ### 1990s 
 
 * Création du Web
-* + de 1 000 000 d'ordinateurs connectés
+* Plus de 1 000 000 d'ordinateurs connectés
 * Premier navigateur
 
 ## Fonctionnement
 
 ### Architecture
+
+#### http
+
+```
+GET	https://www.bibliotheques-clermontmetropole.eu/
+```
+
+```
+HTTP/1.1 200 OK
+Date: Wed, 16 Jun 2021 10:13:33 GMT
+Expires: Sun, 19 Nov 1978 05:00:00 GMT
+Cache-Control: no-cache, must-revalidate
+X-Content-Type-Options: nosniff
+Content-Language: fr
+X-Frame-Options: SAMEORIGIN
+X-UA-Compatible: IE=edge,chrome=1
+Link: </content/accueil>; rel="canonical",</node/860>; rel="shortlink"
+Vary: Accept-Encoding
+Content-Type: text/html; charset=utf-8
+Content-Length: 14897
+Content-Encoding: gzip
+Keep-Alive: timeout=5, max=300
+Connection: Keep-Alive
+```
+ 
+
+
+cookies
 
 ### Langage
 
