--- a/2.generalites.md
+++ b/2.generalites.md
@@ -37,18 +37,23 @@ Décomposition :
 
 * Protocole : `https`
 * Localisation de la ressource : 
-  * Nom de domaine : `www.google.com` (possibilité d'ajouter un port ou un nom d'utilisateur)
+  * Nom de domaine : `www.google.com`
   * Nom de la ressource à demander : `search`
-  * Paramètres : `q=bibliothèques+clermont+metropole` données supplémentaires optionnelles introduites par `?` contenant ici la requête faite
+  * Paramètres : `q=bibliothèques+clermont+metropole` données supplémentaires optionnelles introduites par `?` contenant ici spécifiquement la requête faite
 * Autres ajouts possibles
   * nom d'utilisateur et mot de passe avant le nom de domaine terminé par `@`
   * un port après le nom de domaine précédé par `:`
   * une ancre introduite par `#`
 
-
 ### 2. le langage html pour écrire chaque ressource
 
+hypertext markup language - littéralement language de balises d'hypertexte
 
+code utilisé pour la structure d'une page et son contenu
+
+language de balisage et non de programmation
+
+technologies adjointes : CSS pour la mise en forme et Javascript
 
 ### 3. le protocole http pour communiquer entre les machines
 
@@ -56,7 +61,7 @@ Décomposition :
 
 #### Page Web
 
-Pas de définition technique particulière ; document possible de consulter sur le web (avec un navigateur) auquel on accède via son adresse web (URL)
+Pas de définition technique particulière ; **document** possible de consulter sur le web (avec un navigateur) auquel on accède via son adresse web (URL)
 
 #### Site web
 
@@ -71,6 +76,7 @@ Par extension désigne aussi la machine hébergeant le logiciel.
 
 Logiciel permettant de requêter puis de recevoir les ressources.
 Un navigateur est un type de client http
+Comprend le html, css et js
 
 ## En gros
 
