--- a/2.generalites.md
+++ b/2.generalites.md
@@ -57,6 +57,24 @@ technologies adjointes : CSS pour la mise en forme et Javascript
 
 ### 3. le protocole http pour communiquer entre les machines
 
+hypertext transfer protocol - littéralement "protocole de transfert hypertexte"
+
+base des échanges suivant un modèle client/serveur
+
+|Code|Significations|
+|-|-|
+|1XX|Information|
+|2XX|Succès|
+|3XX|Redirections|
+|4XX|Erreur client|
+|5XX|Erreur serveur|
+
+##### Exemples
+
+* 200 OK
+* 404 Page not found
+* 500 Server Internal Error
+* 504 Gateway Timeout
 
 
 #### Page Web
@@ -119,29 +137,11 @@ Les premières mises en oeuvre et avancées
 
 #### http
 
-```
-GET	https://www.bibliotheques-clermontmetropole.eu/
-```
-
-```
-HTTP/1.1 200 OK
-Date: Wed, 16 Jun 2021 10:13:33 GMT
-Expires: Sun, 19 Nov 1978 05:00:00 GMT
-Cache-Control: no-cache, must-revalidate
-X-Content-Type-Options: nosniff
-Content-Language: fr
-X-Frame-Options: SAMEORIGIN
-X-UA-Compatible: IE=edge,chrome=1
-Link: </content/accueil>; rel="canonical",</node/860>; rel="shortlink"
-Vary: Accept-Encoding
-Content-Type: text/html; charset=utf-8
-Content-Length: 14897
-Content-Encoding: gzip
-Keep-Alive: timeout=5, max=300
-Connection: Keep-Alive
-```
- 
-
+1. Ouverture de la connexion
+2. Envoi de la requête par le client
+3. Traitement de la requête par le serveur & envoi du code et de "paquets"
+4. Réception de la requête par le client
+5. Fermeture de la connexion
 
 cookies
 
