--- a/2.generalites.md
+++ b/2.generalites.md
@@ -23,7 +23,7 @@ http://www.evolutionoftheweb.com/
 
 Basé sur 3 "inventions" :
 
-### 1. les URL pour identifier chaque ressource
+#### 1. les URL pour identifier chaque ressource
 
 Uniform Resource Locator, littéralement Localisateur Uniforme de Ressource
 
@@ -45,7 +45,7 @@ Décomposition :
   * un port après le nom de domaine précédé par `:`
   * une ancre introduite par `#`
 
-### 2. le langage html pour écrire chaque ressource
+#### 2. le langage html pour écrire chaque ressource
 
 hypertext markup language - littéralement language de balises d'hypertexte
 
@@ -55,7 +55,7 @@ language de balisage et non de programmation
 
 technologies adjointes : CSS pour la mise en forme et Javascript
 
-### 3. le protocole http pour communiquer entre les machines
+#### 3. le protocole http pour communiquer entre les machines
 
 hypertext transfer protocol - littéralement "protocole de transfert hypertexte"
 
@@ -130,21 +130,3 @@ Les premières mises en oeuvre et avancées
 * Création du Web
 * Plus de 1 000 000 d'ordinateurs connectés
 * Premier navigateur
-
-## Fonctionnement
-
-### Architecture
-
-#### http
-
-1. Ouverture de la connexion
-2. Envoi de la requête par le client
-3. Traitement de la requête par le serveur & envoi du code et de "paquets"
-4. Réception de la requête par le client
-5. Fermeture de la connexion
-
-cookies
-
-### Langage
-
-css garden
