--- a/1.reponses.md
+++ b/1.reponses.md
@@ -39,7 +39,7 @@ Dans tous les cas, le minimum c'est un accès fonctionnel fourni par votre fourn
 
 ### Commentaires
 
-Un autre ?
+Un autre navigateur ? Un autre système d'exploitation ?
 
 ## Qui est l'intrus ?
 
