--- a/2.generalites.md
+++ b/2.generalites.md
@@ -59,7 +59,7 @@ technologies adjointes : CSS pour la mise en forme et Javascript
 
 hypertext transfer protocol - littéralement "protocole de transfert hypertexte"
 
-base des échanges suivant un modèle client/serveur
+base des échanges suivant un modèle client/serveur initié par le client et traité par le serveur qui renvoie un code
 
 |Code|Significations|
 |-|-|
