--- a/3.pratique.md
+++ b/3.pratique.md
@@ -2,6 +2,8 @@
 
 ### Architecture
 
+![client-serveur](client-serveur.png)
+
 #### http
 
 1. Ouverture de la connexion
@@ -11,6 +13,10 @@
 5. Fermeture de la connexion
 
 cookies
+
+##### https
+
+hypertext transfer protocol secure
 
 ### Langages
 
