--- a/2.generalites.md
+++ b/2.generalites.md
@@ -1,5 +1,34 @@
 # Généralités
 
+## Bref historique
+
+### 1950s
+
+La conceptualisation
+
+### 1960s 
+
+Les premières mises en oeuvre et avancées 
+* Création d'ARPANET (réseau de la défense états-unienne)
+* Premiers ordinateurs en réseau 
+
+### 1970s
+
+* Premier email
+* Création de Usenet (forums)
+
+#### 1980s
+
+* Définition des protocoles 
+* Première utilisation du DNS
+* Plus de 100 000 d'ordinateurs connectés
+
+### 1990s 
+
+* Création du Web
+* Plus de 1 000 000 d'ordinateurs connectés
+* Premier navigateur
+
 ## Définition des concepts
 
 ### Internet
@@ -25,9 +54,9 @@ Basé sur 3 "inventions" :
 
 #### 1. les URL pour identifier chaque ressource
 
-Uniform Resource Locator, littéralement Localisateur Uniforme de Ressource
+Uniform Resource Locator - littéralement "Localisateur Uniforme de Ressource"
 
-Exemple :
+***Cas concret :*** je fais la recherche "bibliothèques clermont metropole" dans le moteur de recherche Google - je suis sur une page dont l'URL est
 
 ```
 https://www.google.com/search?q=bibliothèques+clermont+metropole
@@ -59,7 +88,7 @@ technologies adjointes : CSS pour la mise en forme et Javascript
 
 hypertext transfer protocol - littéralement "protocole de transfert hypertexte"
 
-base des échanges suivant un modèle client/serveur initié par le client et traité par le serveur qui renvoie un code
+base des échanges suivant un modèle client/serveur initié par le client et traité par le serveur qui renvoie un code puis les données
 
 |Code|Significations|
 |-|-|
@@ -76,6 +105,33 @@ base des échanges suivant un modèle client/serveur initié par le client et tr
 * 500 Server Internal Error
 * 504 Gateway Timeout
 
+***Cas concret :*** je clique sur le lien qui m'intéresse dans les résultats de ma recherche
+
+Requête envoyée par le client :
+
+```
+GET	https://www.bibliotheques-clermontmetropole.eu/
+```
+
+Réponse envoyée par le serveur :
+
+```
+HTTP/1.1 200 OK
+Date: Wed, 16 Jun 2021 10:13:33 GMT
+Expires: Sun, 19 Nov 1978 05:00:00 GMT
+Cache-Control: no-cache, must-revalidate
+X-Content-Type-Options: nosniff
+Content-Language: fr
+X-Frame-Options: SAMEORIGIN
+X-UA-Compatible: IE=edge,chrome=1
+Link: </content/accueil>; rel="canonical",</node/860>; rel="shortlink"
+Vary: Accept-Encoding
+Content-Type: text/html; charset=utf-8
+Content-Length: 14897
+Content-Encoding: gzip
+Keep-Alive: timeout=5, max=300
+Connection: Keep-Alive
+```
 
 #### Page Web
 
@@ -98,35 +154,7 @@ Comprend le html, css et js
 
 ## En gros
 
-Internet = réseau de tuyaux & Web = une partie du contenu circulant dans les tuyaux
-http = transport de l'information & html = contenu de la page (information structurée)
-ip = adresse de la machine & url = adresse de la ressource
-
-## Bref historique
-
-### 1950s
-
-La conceptualisation
-
-### 1960s 
-
-Les premières mises en oeuvre et avancées 
-* Création d'ARPANET (réseau de la défense états-unienne)
-* Premiers ordinateurs en réseau 
-
-### 1970s
-
-* Premier email
-* Création de Usenet (forums)
-
-#### 1980s
-
-* Définition des protocoles 
-* Première utilisation du DNS
-* Plus de 100 000 d'ordinateurs connectés
-
-### 1990s 
-
-* Création du Web
-* Plus de 1 000 000 d'ordinateurs connectés
-* Premier navigateur
+* Internet = réseau de tuyaux & Web = une partie du contenu circulant dans les tuyaux
+* http = transport de l'information & html = contenu de la page (information structurée)
+* ip = adresse de la machine & url = adresse de la ressource
+* client = poste utilisatuer & serveur = fournisseur de ressources
