--- a/2.generalites.md
+++ b/2.generalites.md
@@ -17,7 +17,7 @@ Les premières mises en oeuvre et avancées
 * Premier email
 * Création de Usenet (forums)
 
-#### 1980s
+### 1980s
 
 * Définition des protocoles 
 * Première utilisation du DNS
@@ -157,4 +157,4 @@ Comprend le html, css et js
 * Internet = réseau de tuyaux & Web = une partie du contenu circulant dans les tuyaux
 * http = transport de l'information & html = contenu de la page (information structurée)
 * ip = adresse de la machine & url = adresse de la ressource
-* client = poste utilisatuer & serveur = fournisseur de ressources
+* client = poste utilisateur & serveur = fournisseur de ressources
