--- a/3.pratique.md
+++ b/3.pratique.md
@@ -12,31 +12,65 @@
 4. Réception de la requête par le client
 5. Fermeture de la connexion
 
+##### Sessions
+
 cookies
 
 ##### https
 
 hypertext transfer protocol secure
 
+http combiné avec une couche de chiffrement supplémentaire - garantit la confidentialité et l'intégrité des données
+
+#### Traitement du serveur
+
+_NB : ici on parle du logiciel et non de la machine_
+
+Traitement de la requête avec prise en compte des paramètres potentiels envoyés par le client (statique / dynamique)
+
+Possibilité de communication avec une base de données (exemple : authentification) sur la même machine ou une autre
+
 ### Langages
 
 #### html
 
+hypertext markup language
+
+rédaction et structuration du contenu
+
+balises
+
 #### css
+
+cascading style sheets - littéralement feuilles de style en cascade
+
+mise en forme
 
 css garden
 
 #### js
 
+javascript
+
+page dynamique
 
 #### Serveurs
 
+Côté serveur, plus de latitude
+
 ##### Scripts
 
+Liste de langages
 
+* php
+* asp
+* jsp
+* ruby
+* python
 
 ##### Base de données
 
+Lang
 
 # Sécurité
 
@@ -50,6 +84,8 @@ Données personnelles
 
 # Cas pratique : le nouveau SIGB
 
-
+* Iguana : Site web pour les usagers
+* V-Smart : Apllication (site web) pour les agents
+* Caché : Serveur de bases de données
 
 
