--- a/2.generalites.md
+++ b/2.generalites.md
@@ -76,7 +76,7 @@ Décomposition :
 
 #### 2. le langage html pour écrire chaque ressource
 
-hypertext markup language - littéralement language de balises d'hypertexte
+hypertext markup language - littéralement langage de balises d'hypertexte
 
 code utilisé pour la structure d'une page et son contenu
 
