--- a/3.pratique.md
+++ b/3.pratique.md
@@ -70,7 +70,7 @@ Liste de langages
 
 ##### Base de données
 
-Lang
+Langage le plus utilisé : SQL implémenté par différents SGBD (Microsoft Access, mySQL, Oracle, Postgres...)
 
 # Sécurité
 
