--- a/2.generalites.md
+++ b/2.generalites.md
@@ -74,17 +74,7 @@ Décomposition :
   * un port après le nom de domaine précédé par `:`
   * une ancre introduite par `#`
 
-#### 2. le langage html pour écrire chaque ressource
-
-hypertext markup language - littéralement langage de balises d'hypertexte
-
-code utilisé pour la structure d'une page et son contenu
-
-language de balisage et non de programmation
-
-technologies adjointes : CSS pour la mise en forme et Javascript
-
-#### 3. le protocole http pour communiquer entre les machines
+#### 2. le protocole http pour communiquer entre les machines
 
 hypertext transfer protocol - littéralement "protocole de transfert hypertexte"
 
@@ -132,6 +122,40 @@ Content-Encoding: gzip
 Keep-Alive: timeout=5, max=300
 Connection: Keep-Alive
 ```
+
+#### 3. le langage html pour écrire chaque ressource
+
+hypertext markup language - littéralement langage de balises d'hypertexte
+
+code utilisé pour la structure d'une page et son contenu
+
+language de balisage et non de programmation
+
+technologies adjointes : CSS pour la mise en forme et Javascript
+
+***Cas concret :*** mon navigateur affiche ma page (le document) que j'ai demandé
+
+```html
+...
+<ul class="menu">
+ <li class="first leaf has-children menu-mlid-326">
+  <a href="/page/infos-pratiques">Infos pratiques</a>
+ </li>
+ <li class="leaf menu-mlid-611">
+  <a href="/page/ressources-en-ligne-0">Ressources</a>
+ </li>
+ <li class="leaf menu-mlid-1687">
+  <a href="https://www.bibliotheques-clermontmetropole.eu/s/search.php" title="recherche documentaire">CATALOGUE</a>
+ </li>
+ <li class="last leaf has-children menu-mlid-1987">
+  <a href="/page/overnia-bibliotheque-numerique-patrimoine" title="Bibliothèque numérique du patrimoine">PATRIMOINE</a>
+ </li>
+</ul>
+...
+```
+
+Un extrait du document reçu : ici c'est le menu "Infos pratiques / Ressources / CATALOGUE / PATRIMOINE", en html on a simplement une liste de liens
+ 
 
 #### Page Web
 
