--- a/3.pratique.md
+++ b/3.pratique.md
@@ -12,9 +12,15 @@
 4. Réception de la requête par le client
 5. Fermeture de la connexion
 
-#### Sessions
+#### cookies
 
-cookies
+petit ensemble de données envoyé par le serveur stocké sur le client (fichier)
+
+3 utilisations : 
+
+* gestion des sessions
+* personnalisation
+* suivi
 
 #### https
 
@@ -36,9 +42,13 @@ Possibilité de communication avec une base de données (exemple : authentificat
 
 hypertext markup language
 
+langage à balises
+
 rédaction et structuration du contenu
 
-balises créant des éléments
+balises créant des éléments dans notre document représentés par des "boîtes" sur la page
+
+on donne du sens à notre contenu : définir des paragraphes, titres et tables de données ou encore intégrer des images ou des vidéos dans une page
 
 #### Menu de notre page https://www.bibliotheques-clermontmetropole.eu/
 
@@ -59,19 +69,23 @@ balises créant des éléments
 </ul>
 ```
 
-On repère 3 balises différentes
+On repère 3 balises différentes :
 * `<ul>` : liste d'éléments (_unordered list_)
 * `<li>` : élément de liste
 * `<a>` : lien (_anchor_)
-
+Certaines ont des attributs (`href`, `class`...)
 
 ### css
 
 cascading style sheets - littéralement feuilles de style en cascade
 
+langage de règles
+
+propriétés s'appliquant à nos éléments définis dans le document html
+
 http://www.csszengarden.com/
 
-mise en forme
+on met en forme le contenu : modifier la couleur d’arrière-plan ou les polices, ou en disposer le contenu en plusieurs colonnes
 
 ##### Style du premier élément de notre menu
 
@@ -90,15 +104,25 @@ mise en forme
 }
 ```
 
+ici, on change la couleur du fond de l'élément, sa largeur, ses marges, sa taille de police, sa casse...
+
 ### js
 
 javascript
 
-page dynamique
+langage de programmation
+
+on crée et gère du contenu mis à jour de façon dynamique : contrôler le contenu multimédia, ou animer des images...
+
+Sur notre page, https://www.bibliotheques-clermontmetropole.eu/ on a un script `views_slideshow.js` permettant la gestion du défilement des images
+
+#### Astuce 
+
+F12
 
 ### Serveurs
 
-Côté serveur, plus de latitude
+Côté serveur, plus de latitude dans les différents langages
 
 #### Scripts
 
