--- a/1.reponses.md
+++ b/1.reponses.md
@@ -81,3 +81,5 @@ On parle bien de Google le moteur de recherche, la seule confusion possible est 
 un autre langage ? un autre protocole ?
 
 ## Commentaire sur l'utilisation de l'anglais
+
+[Généralités](./2.generalites.md)
