--- a/2.generalites.md
+++ b/2.generalites.md
@@ -185,3 +185,5 @@ Comprend le html, css et js
 * http = transport de l'information & html = contenu de la page (information structurée)
 * ip = adresse de la machine & url = adresse de la ressource
 * client = poste utilisateur & serveur = fournisseur de ressources
+
+[En pratique](./3.pratique.md)
