--- a/2.generalites.md
+++ b/2.generalites.md
@@ -31,16 +31,22 @@ Les premières mises en oeuvre et avancées
 
 ## Définition des concepts
 
+En fil conducteur, on va suivre le cas concret du parcours d'un utilisateur qui veut aller sur le site des bibliothèques de Clermont Auvergne Métropole 
+
 ### Internet
 
 Réseau informatique composé d'une multitude de sous-réseaux qui communiquent entre eux grâce à des protocoles standardisés. 
 Transmission d'information permettant l'utilisation des mails, la tenue de visioconférences, le partage de fichiers...
+
+***Cas concret :*** je connecte mon périphérique au réseau Internet
 
 #### DNS
 
 Service permettant de traduire des URL en adresses IP
 
 ![dns](dns.png)
+
+***Cas concret :*** je tape google.com dans ma barre d'adresse de mon navigateur qui, en premier lieu, contacte le DNS pour trouver l'IP du serveur google.com `216.58.214.67`
 
 ### Web
 
@@ -95,7 +101,7 @@ base des échanges suivant un modèle client/serveur initié par le client et tr
 * 500 Server Internal Error
 * 504 Gateway Timeout
 
-***Cas concret :*** je clique sur le lien qui m'intéresse dans les résultats de ma recherche
+***Cas concret :*** je clique sur le lien `https://www.bibliotheques-clermontmetropole.eu/` qui m'intéresse dans les résultats de ma recherche
 
 Requête envoyée par le client :
 
@@ -136,7 +142,7 @@ technologies adjointes : CSS pour la mise en forme et Javascript
 ***Cas concret :*** mon navigateur affiche ma page (le document) que j'ai demandé
 
 ```html
-...
+[...]
 <ul class="menu">
  <li class="first leaf has-children menu-mlid-326">
   <a href="/page/infos-pratiques">Infos pratiques</a>
@@ -151,7 +157,7 @@ technologies adjointes : CSS pour la mise en forme et Javascript
   <a href="/page/overnia-bibliotheque-numerique-patrimoine" title="Bibliothèque numérique du patrimoine">PATRIMOINE</a>
  </li>
 </ul>
-...
+[...]
 ```
 
 Un extrait du document reçu : ici c'est le menu "Infos pratiques / Ressources / CATALOGUE / PATRIMOINE", en html on a simplement une liste de liens
