--- a/2.generalites.md
+++ b/2.generalites.md
@@ -80,6 +80,12 @@ Décomposition :
   * un port après le nom de domaine précédé par `:`
   * une ancre introduite par `#`
 
+Exemple :
+
+```
+http://Jojo:lApIn@www.exemple.com:8888/chemin/d/acc%C3%A8s.php?q=req&q2=req2#signet
+```
+
 #### 2. le protocole http pour communiquer entre les machines
 
 hypertext transfer protocol - littéralement "protocole de transfert hypertexte"
