--- a/3.pratique.md
+++ b/3.pratique.md
@@ -122,7 +122,13 @@ F12
 
 ### Serveurs
 
+Site statique : fichiers html, css, js pré-créés => efficace avec un petit nombre de pages et envoi du même contenu à chaque utilisateur
+
+Site dynamique : doucments générés avec du contenu basé sur une requête URL spécifique et/ou les données envoyées par le client
+
 Côté serveur, plus de latitude dans les différents langages
+
+De nombreuses actions possibles : création d'un fichier, écriture dans une base de données,  envoi de mails, téléchargement de fichiers...
 
 #### Scripts
 
@@ -147,9 +153,8 @@ Langage le plus utilisé : SQL implémenté par différents SGBD (Microsoft Acce
 Données personnelles
 
 
-
 # Cas pratique : le nouveau SIGB
 
 * Iguana : Site web pour les usagers
-* V-Smart : Apllication (site web) pour les agents
+* V-Smart : Application (site web) pour les agents
 * Caché : Serveur de bases de données
