--- a/2.generalites.md
+++ b/2.generalites.md
@@ -148,7 +148,7 @@ technologies adjointes : CSS pour la mise en forme et Javascript
 ***Cas concret :*** mon navigateur affiche ma page (le document) que j'ai demandé
 
 ```html
-[...]
+...
 <ul class="menu">
  <li class="first leaf has-children menu-mlid-326">
   <a href="/page/infos-pratiques">Infos pratiques</a>
@@ -163,7 +163,7 @@ technologies adjointes : CSS pour la mise en forme et Javascript
   <a href="/page/overnia-bibliotheque-numerique-patrimoine" title="Bibliothèque numérique du patrimoine">PATRIMOINE</a>
  </li>
 </ul>
-[...]
+...
 ```
 
 Un extrait du document reçu : ici c'est le menu "Infos pratiques / Ressources / CATALOGUE / PATRIMOINE", en html on a simplement une liste de liens
@@ -188,7 +188,7 @@ Logiciel permettant de requêter puis de recevoir les ressources.
 
 Un navigateur est un type de client http
 
-Comprend le html, css et js
+Sait interpréter le html, css et js
 
 ## En gros
 
