--- a/2.generalites.md
+++ b/2.generalites.md
@@ -31,7 +31,7 @@ Les premières mises en oeuvre et avancées
 
 ## Définition des concepts
 
-En fil conducteur, on va suivre le cas concret du parcours d'un utilisateur qui veut aller sur le site des bibliothèques de Clermont Auvergne Métropole 
+En fil conducteur, je vais suivre le cas concret du parcours d'un utilisateur qui veut aller sur le site des bibliothèques de Clermont Auvergne Métropole 
 
 ### Internet
 
@@ -46,7 +46,7 @@ Service permettant de traduire des URL en adresses IP
 
 ![dns](dns.png)
 
-***Cas concret :*** je tape google.com dans ma barre d'adresse de mon navigateur qui, en premier lieu, contacte le DNS pour trouver l'IP du serveur google.com `216.58.204.142`
+***Cas concret :*** je tape google.com dans ma barre d'adresse de mon navigateur qui, en premier lieu, contacte le DNS pour trouver l'IP du serveur google.com `216.58.204.132`
 
 ### Web
 
