--- a/2.generalites.md
+++ b/2.generalites.md
@@ -35,12 +35,16 @@ En fil conducteur, je vais suivre le cas concret du parcours d'un utilisateur qu
 
 ### Internet
 
+Etymologie : inter-network
+
 Réseau informatique composé d'une multitude de sous-réseaux qui communiquent entre eux grâce à des protocoles standardisés. 
 Transmission d'information permettant l'utilisation des mails, la tenue de visioconférences, le partage de fichiers...
 
 ***Cas concret :*** je connecte mon périphérique au réseau Internet
 
 #### DNS
+
+Domain Name System - littéralement Système de Noms de Domaine
 
 Service permettant de traduire des URL en adresses IP
 
@@ -143,7 +147,7 @@ code utilisé pour la structure d'une page et son contenu
 
 language de balisage et non de programmation
 
-technologies adjointes : CSS pour la mise en forme et Javascript
+technologies adjointes : CSS pour la mise en forme et Javascript pour le dynamisme
 
 ***Cas concret :*** mon navigateur affiche ma page (le document) que j'ai demandé
 
@@ -189,6 +193,8 @@ Logiciel permettant de requêter puis de recevoir les ressources.
 Un navigateur est un type de client http
 
 Sait interpréter le html, css et js
+
+Par extension désigne aussi la machine de l'utilisateur.
 
 ## En gros
 
