--- a/2.generalites.md
+++ b/2.generalites.md
@@ -46,7 +46,9 @@ Transmission d'information permettant l'utilisation des mails, la tenue de visio
 
 Domain Name System - littéralement Système de Noms de Domaine
 
-Service permettant de traduire des URL en adresses IP
+Service permettant de traduire des URL en adresses IP en partant du nom de domaine de premier niveau (TLD : top-level domain) : `.com`, `.org`, `.fr`... jusqu'au plus fin
+
+Domaine de deuxième niveau français ?
 
 ![dns](dns.png)
 
