--- a/3.pratique.md
+++ b/3.pratique.md
@@ -126,7 +126,7 @@ Site statique : fichiers html, css, js pré-créés => efficace avec un petit no
 
 Site dynamique : doucments générés avec du contenu basé sur une requête URL spécifique et/ou les données envoyées par le client
 
-Côté serveur, plus de latitude dans les différents langages
+Côté serveur, plus de latitude dans les différents langages ou architectures
 
 De nombreuses actions possibles : création d'un fichier, écriture dans une base de données,  envoi de mails, téléchargement de fichiers...
 
@@ -143,6 +143,10 @@ Liste de langages
 #### Base de données
 
 Langage le plus utilisé : SQL implémenté par différents SGBD (Microsoft Access, mySQL, Oracle, Postgres...)
+
+#### Architecture
+
+De nombreuses applications web sont basées sur le modèle MVC : Modèle-Vue-Controller qui sépare les données, l'interface et la logique.
 
 # Sécurité
 
