--- a/1.reponses.md
+++ b/1.reponses.md
@@ -52,7 +52,9 @@ Un autre navigateur ? Un autre système d'exploitation ?
 
 ## Pourquoi ?
 
-Google, Qwant et Bing sont des moteurs de recherches
+Google, Qwant et Bing sont des moteurs de recherche
+
+Facebook est un réseau social
 
 ### Commentaires
 
